fixes for map distortion

--- a/themes/afterclass2/scss/layout/_layout.scss
+++ b/themes/afterclass2/scss/layout/_layout.scss
@@ -103,6 +103,20 @@ input.division-search-input[type="search"], input.division-search-input[type="se
     }
 
 }
+/* Google Map Foundation Fixes */
+.gm-style div div *{ -webkit-transform: none !important; }
+.map-container img, object, embed { max-width: none; }
+
+#map_canvas embed { max-width: none; }
+
+#map_canvas img { max-width: none; }
+
+#map_canvas object { max-width: none; }
+
+#status img {
+    position: absolute;
+    margin: 0 1em;
+}
 
 
 
